# simple_rust_serwer

./: Cargo.toml
src/: main.rs
