[package]
name = "simple_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
bytes = "1"
colored = "2.0.0"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]
